2007-10-24  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.[ch]:
        * libnautilus-private/nautilus-vfs-file.c:
	Pass GMountOperation instead of parent to mount.
	Nothing for unmount/eject
	
        * src/file-manager/fm-directory-view.c:
	Pass in a mount operation for mount.
	Disable timeout when mount operation is active

2007-10-24  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
	Use g_utf8_collate, not eel_strcoll.

2007-10-24  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-icon-canvas-item.c:
        * test/test.c:
	Update for eel changes

2007-10-23  Alexander Larsson  <alexl@redhat.com>

        * configure.in:
        * libnautilus-private/nautilus-icon-canvas-item.[ch]:
        * libnautilus-private/nautilus-icon-container.c:
        * libnautilus-private/nautilus-icon-dnd.c:
        * libnautilus-private/nautilus-icon-private.h:
        * test/test.c:
	Remove libart dependency, use eel rect and point types

2007-10-23  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-program-choosing.c:
        (nautilus_launch_application_from_command):
	Use gdk_spawn instead of eel

2007-10-23  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-dnd.c:
        * libnautilus-private/nautilus-file.c:
        * libnautilus-private/nautilus-program-choosing.c:
        * src/file-manager/fm-directory-view.c:
        * src/file-manager/fm-properties-window.c:
        * src/nautilus-emblem-sidebar.c:
        * src/nautilus-information-panel.c:
	Don't use removed eel gnome-vfs functions

2007-10-23  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory.[ch]:
        Add nautilus_directory_get_location

        * libnautilus-private/nautilus-file.[ch]:
	Add nautilus_file_get_parent_location.
	Port from eel_format_uri_for_display to gio parse names
	