@@ -1,3 +1,8 @@
+2007-10-24  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/nautilus-file-management-properties.c:
+	remove eel_string_list (ab)use.
+
 2007-10-24  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-file.[ch]:
